--- a/Semester2/1017/SDL_Template32/SDL_Template32/SDL_Template32.vcxproj
+++ b/Semester2/1017/SDL_Template32/SDL_Template32/SDL_Template32.vcxproj
@@ -76,10 +76,10 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\SDL\SDL2-2.0.8\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\crizz\Desktop\SDL2_mixer-2.0.4\include;C:\Users\crizz\Desktop\SDL2_ttf-2.0.14\include;C:\Users\crizz\Desktop\SDL2_image-2.0.4\include;C:\Users\crizz\Desktop\SDL2-2.0.9\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <AdditionalLibraryDirectories>C:\SDL\SDL2-2.0.8\lib\x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Users\crizz\Desktop\SDL2_mixer-2.0.4\lib\x86;C:\Users\crizz\Desktop\SDL2_ttf-2.0.14\lib\x86;C:\Users\crizz\Desktop\SDL2_image-2.0.4\lib\x86;C:\Users\crizz\Desktop\SDL2-2.0.9\lib\x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_mixer.lib;SDL2_ttf.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SubSystem>Console</SubSystem>
     </Link>
@@ -122,7 +122,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
-    <ClCompile Include="Game.cpp" />
+    <ClCompile Include="Game.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
