--- a/Semester2/1017/SDL_Template32/SDL_Template32/SDL_Template32.vcxproj.filters
+++ b/Semester2/1017/SDL_Template32/SDL_Template32/SDL_Template32.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClCompile Include="Main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Game.cpp">
+    <ClCompile Include="Game.h">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
