--- a/Semester2/1017/A2/PROG33921_EngineFramework/PROG33921_EngineFramework.vcxproj
+++ b/Semester2/1017/A2/PROG33921_EngineFramework/PROG33921_EngineFramework.vcxproj
@@ -22,7 +22,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{A30F351D-77F8-42A4-A34C-FD5A8385F19D}</ProjectGuid>
     <RootNamespace>PROG33921EngineFramework</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
     <ProjectName>GAME1017_SpaceRunner</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -91,7 +91,12 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>C:\SDL\SDL2_ttf-2.0.15\include;C:\SDL\SDL2_mixer-2.0.4\include;C:\SDL\SDL2-2.0.8\include;C:\SDL\SDL2_image-2.0.4\include</AdditionalIncludeDirectories>
     </ClCompile>
+    <Link>
+      <AdditionalLibraryDirectories>C:\SDL\SDL2-2.0.8\lib\x86;C:\SDL\SDL2_ttf-2.0.15\lib\x86;C:\SDL\SDL2_mixer-2.0.4\lib\x86;C:\SDL\SDL2_image-2.0.4\lib\x86</AdditionalLibraryDirectories>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_mixer.lib;SDL2_ttf.lib;%(AdditionalDependencies)</AdditionalDependencies>
+    </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
